src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_clamp(value self, value min, value max);
value atg_clamp_(value self, value min, value max);
value atg_clamp_max(value self, value max);
value atg_clamp_max_(value self, value max);
value atg_clamp_max_out(value out, value self, value max);
value atg_clamp_max_tensor(value self, value max);
value atg_clamp_max_tensor_(value self, value max);
value atg_clamp_max_tensor_out(value out, value self, value max);
value atg_clamp_min(value self, value min);
value atg_clamp_min_(value self, value min);
value atg_clamp_min_out(value out, value self, value min);
value atg_clamp_min_tensor(value self, value min);
value atg_clamp_min_tensor_(value self, value min);
value atg_clamp_min_tensor_out(value out, value self, value min);
value atg_clamp_out(value out, value self, value min, value max);
value atg_clamp_tensor(value self, value min, value max);
value atg_clamp_tensor_(value self, value min, value max);
value atg_clamp_tensor_out(value out, value self, value min, value max);
value atg_clip(value self, value min, value max);
value atg_clip_(value self, value min, value max);
value atg_clip_out(value out, value self, value min, value max);
value atg_clip_tensor(value self, value min, value max);
value atg_clip_tensor_(value self, value min, value max);
value atg_clip_tensor_out(value out, value self, value min, value max);
value atg_clone(value self);
value atg_clone_out(value out, value self);
value atg_coalesce(value self);
value atg_col2im(value self, value output_size, value kernel_size, value dilation, value padding, value stride);
value atg_col2im_out(value out, value self, value output_size, value kernel_size, value dilation, value padding, value stride);
value atg_col_indices(value self);
value atg_col_indices_copy(value self);
value atg_col_indices_copy_out(value out, value self);
value atg_column_stack(value tensors);
value atg_column_stack_out(value out, value tensors);
value atg_combinations(value self, int64_t r, int with_replacement);
value atg_complex(value real, value imag);
value atg_complex_out(value out, value real, value imag);
value atg_concat(value tensors, int64_t dim);
value atg_concat_out(value out, value tensors, int64_t dim);
value atg_concatenate(value tensors, int64_t dim);
value atg_concatenate_out(value out, value tensors, int64_t dim);
value atg_conj(value self);
value atg_conj_physical(value self);
value atg_conj_physical_(value self);
value atg_conj_physical_out(value out, value self);
value atg_constant_pad_nd(value self, value pad, value value_);
value atg_constant_pad_nd_out(value out, value self, value pad, value value_);
value atg_contiguous(value self);
value atg_conv1d(value input, value weight, value bias, value stride, value padding, value dilation, int64_t groups);
value atg_conv1d_padding(value input, value weight, value bias, value stride, const char * padding, value dilation, int64_t groups);
value atg_conv2d(value input, value weight, value bias, value stride, value padding, value dilation, int64_t groups);
value atg_conv2d_padding(value input, value weight, value bias, value stride, const char * padding, value dilation, int64_t groups);
value atg_conv3d(value input, value weight, value bias, value stride, value padding, value dilation, int64_t groups);
value atg_conv3d_padding(value input, value weight, value bias, value stride, const char * padding, value dilation, int64_t groups);
value atg_conv_depthwise3d(value self, value weight, value kernel_size, value bias, value stride, value padding, value dilation);
value atg_conv_depthwise3d_out(value out, value self, value weight, value kernel_size, value bias, value stride, value padding, value dilation);
value atg_conv_tbc(value self, value weight, value bias, int64_t pad);
value atg_conv_tbc_backward(value self, value input, value weight, value bias, int64_t pad);
value atg_conv_tbc_out(value out, value self, value weight, value bias, int64_t pad);
value atg_conv_transpose1d(value input, value weight, value bias, value stride, value padding, value output_padding, int64_t groups, value dilation);
value atg_conv_transpose2d(value input, value weight, value bias, value stride, value padding, value output_padding, int64_t groups, value dilation);
value atg_conv_transpose3d(value input, value weight, value bias, value stride, value padding, value output_padding, int64_t groups, value dilation);
value atg_convolution(value input, value weight, value bias, value stride, value padding, value dilation, int transposed, value output_padding, int64_t groups);
value atg_convolution_out(value out, value input, value weight, value bias, value stride, value padding, value dilation, int transposed, value output_padding, int64_t groups);
value atg_convolution_overrideable(value input, value weight, value bias, value stride, value padding, value dilation, int transposed, value output_padding, int64_t groups);
value atg_convolution_overrideable_out(value out, value input, value weight, value bias, value stride, value padding, value dilation, int transposed, value output_padding, int64_t groups);
value atg_copy(value self, value src, int non_blocking);