src/bindings/torch_bindings_generated2.ml


  let stubs_clamp =
    foreign "atg_clamp" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_clamp_ =
    foreign "atg_clamp_" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_clamp_max =
    foreign "atg_clamp_max" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_clamp_max_ =
    foreign "atg_clamp_max_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_clamp_max_out =
    foreign
      "atg_clamp_max_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_clamp_max_tensor =
    foreign "atg_clamp_max_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_clamp_max_tensor_ =
    foreign "atg_clamp_max_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_clamp_max_tensor_out =
    foreign
      "atg_clamp_max_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_clamp_min =
    foreign "atg_clamp_min" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_clamp_min_ =
    foreign "atg_clamp_min_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_clamp_min_out =
    foreign
      "atg_clamp_min_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_clamp_min_tensor =
    foreign "atg_clamp_min_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_clamp_min_tensor_ =
    foreign "atg_clamp_min_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_clamp_min_tensor_out =
    foreign
      "atg_clamp_min_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_clamp_out =
    foreign
      "atg_clamp_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_clamp_tensor =
    foreign
      "atg_clamp_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_clamp_tensor_ =
    foreign
      "atg_clamp_tensor_"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_clamp_tensor_out =
    foreign
      "atg_clamp_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_clip =
    foreign "atg_clip" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_clip_ =
    foreign "atg_clip_" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_clip_out =
    foreign
      "atg_clip_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_clip_tensor =
    foreign
      "atg_clip_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_clip_tensor_ =
    foreign
      "atg_clip_tensor_"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_clip_tensor_out =
    foreign
      "atg_clip_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_clone = foreign "atg_clone" (gc_tensor @-> returning raw_tensor)

  let stubs_clone_out =
    foreign "atg_clone_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_coalesce = foreign "atg_coalesce" (gc_tensor @-> returning raw_tensor)

  let stubs_col2im =
    foreign
      "atg_col2im"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_col2im_out =
    foreign
      "atg_col2im_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_col_indices = foreign "atg_col_indices" (gc_tensor @-> returning raw_tensor)

  let stubs_col_indices_copy =
    foreign "atg_col_indices_copy" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_col_indices_copy_out =
    foreign "atg_col_indices_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_column_stack =
    foreign "atg_column_stack" (ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_column_stack_out =
    foreign
      "atg_column_stack_out"
      (gc_tensor @-> ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_combinations =
    foreign "atg_combinations" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_complex =
    foreign "atg_complex" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_complex_out =
    foreign
      "atg_complex_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_concat =
    foreign "atg_concat" (ptr gc_tensor @-> int @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_concat_out =
    foreign
      "atg_concat_out"
      (gc_tensor @-> ptr gc_tensor @-> int @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_concatenate =
    foreign "atg_concatenate" (ptr gc_tensor @-> int @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_concatenate_out =
    foreign
      "atg_concatenate_out"
      (gc_tensor @-> ptr gc_tensor @-> int @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_conj = foreign "atg_conj" (gc_tensor @-> returning raw_tensor)

  let stubs_conj_physical =
    foreign "atg_conj_physical" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_conj_physical_ =
    foreign "atg_conj_physical_" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_conj_physical_out =
    foreign "atg_conj_physical_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_constant_pad_nd =
    foreign
      "atg_constant_pad_nd"
      (gc_tensor @-> ptr int64_t @-> int @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_constant_pad_nd_out =
    foreign
      "atg_constant_pad_nd_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_contiguous = foreign "atg_contiguous" (gc_tensor @-> returning raw_tensor)

  let stubs_conv1d =
    foreign
      "atg_conv1d"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_conv1d_padding =
    foreign
      "atg_conv1d_padding"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> string
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_conv2d =
    foreign
      "atg_conv2d"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_conv2d_padding =
    foreign
      "atg_conv2d_padding"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> string
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_conv3d =
    foreign
      "atg_conv3d"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_conv3d_padding =
    foreign
      "atg_conv3d_padding"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> string
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_conv_depthwise3d =
    foreign
      "atg_conv_depthwise3d"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_conv_depthwise3d_out =
    foreign
      "atg_conv_depthwise3d_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_conv_tbc =
    foreign
      "atg_conv_tbc"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_conv_tbc_backward =
    foreign
      "atg_conv_tbc_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning void)
  ;;

  let stubs_conv_tbc_out =
    foreign
      "atg_conv_tbc_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;
end

module C2 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_conv_transpose1d =
    foreign
      "atg_conv_transpose1d"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_conv_transpose2d =
    foreign
      "atg_conv_transpose2d"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_conv_transpose3d =
    foreign
      "atg_conv_transpose3d"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_convolution =
    foreign
      "atg_convolution"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_convolution_out =
    foreign
      "atg_convolution_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_convolution_overrideable =
    foreign
      "atg_convolution_overrideable"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_convolution_overrideable_out =
    foreign
      "atg_convolution_overrideable_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_copy =
    foreign "atg_copy" (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;
